src/test/resources/purescript_examples/passing/ModuleExport.purs.psi
Purescript File
  PSProgramImpl(Program)
    PSModuleImpl(Module)
      PsiElement(module)('module')
      PsiElement(whitespace)(' ')
      PSProperNameImpl(ModuleName)
        PSProperNameImpl(Qualified)
          PsiElement(proper name)('Main')
        PsiElement(whitespace)(' ')
      PsiElement(where)('where')
      PsiElement(whitespace)('\n\n')
      PSNamedBinderImpl(NamedBinder)
        <empty list>
      PSImportDeclarationImpl(ImportDeclaration)
        PsiElement(import)('import')
        PsiElement(whitespace)(' ')
        PSProperNameImpl(ImportModuleName)
          PSProperNameImpl(Qualified)
            PSProperNameImpl(ProperName)
              PsiElement(proper name)('Control')
            PsiElement(.)('.')
            PSProperNameImpl(ProperName)
              PsiElement(proper name)('Monad')
            PsiElement(.)('.')
            PSProperNameImpl(ProperName)
              PsiElement(proper name)('Eff')
            PsiElement(.)('.')
            PsiElement(proper name)('Console')
          PsiElement(whitespace)(' ')
        PsiElement(()('(')
        PSPositionedDeclarationRefImpl(PositionedDeclarationRef)
          PSValueRefImpl(ValueRef)
            PSIdentifierImpl(identifier)
              PsiElement(identifier)('log')
        PsiElement(,)(',')
        PsiElement(whitespace)(' ')
        PSPositionedDeclarationRefImpl(PositionedDeclarationRef)
          PSValueRefImpl(ValueRef)
            PSIdentifierImpl(identifier)
              PsiElement(identifier)('logShow')
        PsiElement())(')')
        PsiElement(whitespace)('\n')
      PSNamedBinderImpl(NamedBinder)
        <empty list>
      PSImportDeclarationImpl(ImportDeclaration)
        PsiElement(import)('import')
        PsiElement(whitespace)(' ')
        PSProperNameImpl(ImportModuleName)
          PSProperNameImpl(Qualified)
            PsiElement(proper name)('A')
          PsiElement(whitespace)('\n\n')
      PSValueDeclarationImpl(ValueDeclaration)
        PSIdentifierImpl(identifier)
          PsiElement(identifier)('main')
          PsiElement(whitespace)(' ')
        PSNamedBinderImpl(NamedBinder)
          <empty list>
        PsiElement(=)('=')
        PsiElement(whitespace)(' ')
        PSValueImpl(Value)
          PSPrefixValueImpl(PrefixValue)
            PsiElement(do)('do')
            PsiElement(whitespace)('\n  ')
            PSDoNotationValueImpl(DoNotationValue)
              PSValueImpl(Value)
                PSPrefixValueImpl(PrefixValue)
                  PSVarImpl(Var)
                    PSProperNameImpl(Qualified)
                      PSIdentifierImpl(identifier)
                        PsiElement(identifier)('logShow')
                        PsiElement(whitespace)(' ')
                  PSParensImpl(Parens)
                    PsiElement(()('(')
                    PSValueImpl(Value)
                      PSPrefixValueImpl(PrefixValue)
                        PSVarImpl(Var)
                          PSProperNameImpl(Qualified)
                            PSIdentifierImpl(identifier)
                              PsiElement(identifier)('show')
                              PsiElement(whitespace)(' ')
                        PSNumericLiteralImpl(NumericLiteral)
                          PsiElement(float)('1.0')
                    PsiElement())(')')
                    PsiElement(whitespace)('\n  ')
            PSDoNotationValueImpl(DoNotationValue)
              PSValueImpl(Value)
                PSPrefixValueImpl(PrefixValue)
                  PSVarImpl(Var)
                    PSProperNameImpl(Qualified)
                      PSIdentifierImpl(identifier)
                        PsiElement(identifier)('log')
                        PsiElement(whitespace)(' ')
                  PSStringLiteralImpl(StringLiteral)
                    PsiElement(string)('"Done"')
                    PsiElement(whitespace)('\n')
