src/test/resources/purescript_examples/failing/2567.purs.psi
Purescript File
  PsiElement(whitespace)('-- @shouldFailWith NoInstanceFound\n')
  PSProgramImpl(Program)
    PSModuleImpl(Module)
      PsiElement(module)('module')
      PsiElement(whitespace)(' ')
      PSProperNameImpl(ModuleName)
        PSProperNameImpl(Qualified)
          PsiElement(proper name)('Main')
        PsiElement(whitespace)(' ')
      PsiElement(where)('where')
      PsiElement(whitespace)('\n\n')
      PSTypeDeclarationImpl(TypeDeclaration)
        PSTypeAnnotationNameImpl(TypeAnnotationName)
          PSIdentifierImpl(identifier)
            PsiElement(identifier)('foo')
            PsiElement(whitespace)(' ')
        PsiElement(::)('::')
        PsiElement(whitespace)(' ')
        PSTypeImpl(Type)
          PSTypeAtomImpl(TypeAtom)
            PSIdentifierImpl(TypeConstructor)
              PSProperNameImpl(Qualified)
                PSProperNameImpl(ProperName)
                  PsiElement(proper name)('Int')
                  PsiElement(whitespace)('\n')
      PSValueDeclarationImpl(ValueDeclaration)
        PSIdentifierImpl(identifier)
          PsiElement(identifier)('foo')
          PsiElement(whitespace)(' ')
        PSNamedBinderImpl(NamedBinder)
          <empty list>
        PsiElement(=)('=')
        PsiElement(whitespace)(' ')
        PSValueImpl(Value)
          PSPrefixValueImpl(PrefixValue)
            PSParensImpl(Parens)
              PsiElement(()('(')
              PSValueImpl(Value)
                PSPrefixValueImpl(PrefixValue)
                  PSNumericLiteralImpl(NumericLiteral)
                    PsiElement(natural)('0')
                    PsiElement(whitespace)(' ')
                  PsiElement(::)('::')
                  PsiElement(whitespace)(' ')
                  PSTypeImpl(Type)
                    PSTypeAtomImpl(TypeAtom)
                      PSIdentifierImpl(TypeConstructor)
                        PSProperNameImpl(Qualified)
                          PSProperNameImpl(ProperName)
                            PsiElement(proper name)('Fail')
                            PsiElement(whitespace)(' ')
                    PsiElement(string)('"This constraint should be checked"')
                    PsiElement(whitespace)(' ')
                    PsiElement(=>)('=>')
                    PsiElement(whitespace)(' ')
                    PSTypeImpl(Type)
                      PSTypeAtomImpl(TypeAtom)
                        PSIdentifierImpl(TypeConstructor)
                          PSProperNameImpl(Qualified)
                            PSProperNameImpl(ProperName)
                              PsiElement(proper name)('Int')
              PsiElement())(')')
              PsiElement(whitespace)('\n')
